# intro-pyomo

./: Fundamentos de Pyomo.ipynb  LICENSE  Optimización discreta.ipynb  README.md  SeparaciónNoTotal.ipynb  fundamentos_pyomo.ipynb  optimizacion_discreta.ipynb  pyproject.toml  python_basico.ipynb
